edition = "2023";

package com.redpup.justsendit.model.board.tile;

option java_multiple_files = true;
option java_package = "com.redpup.justsendit.model.board.tile.proto";

import "model/board/tile/lift.proto";
import "model/board/tile/slope.proto";

/** A wrapper of tile parameters for a tile on the mountain. */
message MountainTile {
  // Type of tile. Must be set.
  oneof tile {
    SlopeTile slope = 1;
    LiftTile lift = 2;
  }

  // Link to an apres slot. 0 if no apres linked.
  int32 apres_link = 3;
}

/** A list of mountain tiles. */
message MountainTileList {
  repeated MountainTile tiles = 1;
}
